--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
      <p id="one">Welcome experimental junkies</p> 
      <p id="two">Normies are strictly prohibited!</p>
      <img 
-         src="https://github.com/KABOOMincognito/kaboomwebsite/blob/main/KABOOM%20logo.jpg"
+         src="https://cdnb.artstation.com/p/assets/images/images/076/392/851/large/madhurjo-majumder-1715132988136.jpg?1716898893"
          alt="KABOOM logo"
          height="350"
      />
