--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
      <p id="two">Normies are strictly prohibited!</p>
      <img 
          src="https://github.com/KABOOMincognito/kaboomwebsite/blob/main/KABOOM%20logo.jpg"
-        
+         alt="KABOOM logo"
          height="350"
      />
      <h3>Bio ▄︻デ══━一 -</h3>
