--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
      <p id="one">Welcome experimental junkies</p> 
      <p id="two">Normies are strictly prohibited!</p>
      <img 
-         src="https://github.com/KABOOMincognito/kaboomwebsite/blob/main/KABOOM%20logo.jpg"
+         src="KABOOM logo.jpg"
          alt="KABOOM logo"
          height="350"
      />
