--- a/3D_Portfolio.html
+++ b/3D_Portfolio.html
@@ -26,22 +26,22 @@
     <h2>$$$  3D Artworks  $$$</h2>
     <li><b><u>G.O.W</u></b></li>
     <br />
-    <a href="https://www.artstation.com/artwork/WBNy6Q"><img src="/gow sword.jpg"height="300"></a>
+    <a href="https://github.com/KABOOMincognito/kaboomwebsite/blob/main/gow%20sword.jpg?raw=true"><img src="/gow sword.jpg"height="300"></a>
     <p>click on the above pic to open</p>
     </br>
     <li><b><u>CRYSTALO</u></b></li>
     <br />
-    <a href="https://www.artstation.com/artwork/39AR9J"><img src="/crystalo.jpg"height="300"></a>
+    <a href="https://github.com/KABOOMincognito/kaboomwebsite/blob/main/crystalo.jpg?raw=true"><img src="/crystalo.jpg"height="300"></a>
     <p>click on the above pic to open</p>
 </br>
 <li><b><u>PEELY</u></b></li>
 <br />
-<a href="https://www.artstation.com/artwork/YBwV2X"><img src="/peely.jpg"height="300"></a>
+<a href="https://github.com/KABOOMincognito/kaboomwebsite/blob/main/peely.jpg?raw=true"><img src="/peely.jpg"height="300"></a>
 <p>click on the above pic to open</p>
 </br>
 <li><b><u>LION DAGGER</u></b></li>
 <br />
-<a href="https://www.artstation.com/artwork/Dvr4Ln"><img src="/LION DAGGER.jpg"height="300"></a>
+<a href="https://github.com/KABOOMincognito/kaboomwebsite/blob/main/LION%20DAGGER.jpg?raw=true"><img src="/LION DAGGER.jpg"height="300"></a>
 <p>click on the above pic to open</p>
     <pre>xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx---------------------------------------------------------------------xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</pre>
     <h2>$$$  Character Designs  $$$</h2>
