--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
      <p><pre>Who is Kaboom? What are his skills?</pre>
         <button><a href="https://github.com/KABOOMincognito/kaboomwebsite/blob/main/hello.html/">Click 4 Answer</a></button>
      <pre>What is his Education background?</pre>
-     <button><a href="github.com/KABOOMincognito/kaboomwebsite/blob/main/education.html">Click 4 Answer</a></button>
+     <button><a href="https://github.com/KABOOMincognito/kaboomwebsite/blob/main/education.html">Click 4 Answer</a></button>
     </p>
      <hr />
      <h3>Portfolio Links ▄︻デ══━一 </h3>
