--- a/index.html
+++ b/index.html
@@ -26,9 +26,8 @@
      </article>
      <br />
      <p><pre>Who is Kaboom? What are his skills?</pre>
-        <button><a href="https://github.com/KABOOMincognito/kaboomwebsite/blob/main/hello.html/">Click 4 Answer</a></button>
+        <button><a href="https://kaboomincognito.github.io/kaboomwebsite/hello.html">Click 4 Answer</a></button>
      <pre>What is his Education background?</pre>
-     <button><a href="https://kaboomincognito.github.io/kaboomwebsite/education.html/">Click 4 Answer</a></button>
     <button><a href="https://kaboomincognito.github.io/kaboomwebsite/education.html">Click 4 Answer</a></button>
     </p>
      <hr />
