--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
      </article>
      <br />
      <p><pre>Who is Kaboom? What are his skills?</pre>
-        <button><a href="https://kaboomincognito.github.io/kaboomwebsite/hello.html">Click 4 Answer</a></button>
+        <button><a href="https://kaboomincognito.github.io/kaboomwebsite/hello.html ">Click 4 Answer</a></button>
      <pre>What is his Education background?</pre>
-    <button><a href="https://kaboomincognito.github.io/kaboomwebsite/education.html">Click 4 Answer</a></button>
+    <button><a href="https://kaboomincognito.github.io/kaboomwebsite/education.html ">Click 4 Answer</a></button>
     </p>
      <hr />
      <h3>Portfolio Links ▄︻デ══━一 </h3>
-     <p>3D & 2D Portfolio link - <button><a href="3D_Portfolio.html/"> Click me!</a></button>
+     <p>3D & 2D Portfolio link - <button><a href="3D_Portfolio.html "> Click me!</a></button>
      <br />
      Github link - <button><a href="https://github.com/KABOOMincognito/localrepo">Click me!</a></button></p>
      <br />
