--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </p>
      <hr />
      <h3>Portfolio Links ▄︻デ══━一 </h3>
-     <p>3D & 2D Portfolio link - <button><a href="3D_Portfolio.html "> Click me!</a></button>
+     <p>3D & 2D Portfolio link - <button><a href="https://kaboomincognito.github.io/kaboomwebsite/3D_Portfolio.html "> Click me!</a></button>
      <br />
      Github link - <button><a href="https://github.com/KABOOMincognito/localrepo">Click me!</a></button></p>
      <br />
