--- a/3D_Portfolio.html
+++ b/3D_Portfolio.html
@@ -26,7 +26,10 @@
     <h2>$$$  3D Artworks  $$$</h2>
     <li><b><u>G.O.W</u></b></li>
     <br />
-    <a href="https://github.com/KABOOMincognito/kaboomwebsite/blob/main/gow%20sword.jpg?raw=true"><img src="/gow sword.jpg"height="300"></a>
+    <a <img 
+         src="https://github.com/KABOOMincognito/kaboomwebsite/blob/main/KABOOM%20logo.jpg?raw=true"
+         alt="KABOOM logo"
+         height="350"> </a>
     <p>click on the above pic to open</p>
     </br>
     <li><b><u>CRYSTALO</u></b></li>
