--- a/3D_Portfolio.html
+++ b/3D_Portfolio.html
@@ -26,15 +26,12 @@
     <h2>$$$  3D Artworks  $$$</h2>
     <li><b><u>G.O.W</u></b></li>
     <br />
-    <a <img 
-         src="https://github.com/KABOOMincognito/kaboomwebsite/blob/main/KABOOM%20logo.jpg?raw=true"
-         alt="KABOOM logo"
-         height="350"> </a>
+    <a href="https://github.com/KABOOMincognito/kaboomwebsite/blob/main/crystalo.jpg?raw=true"><img src="/crystalo.jpg"height="300"></a>
     <p>click on the above pic to open</p>
     </br>
     <li><b><u>CRYSTALO</u></b></li>
     <br />
-    <a href="https://github.com/KABOOMincognito/kaboomwebsite/blob/main/crystalo.jpg?raw=true"><img src="/crystalo.jpg"height="300"></a>
+    <a href="https://www.artstation.com/artwork/39AR9J"><img src="https://github.com/KABOOMincognito/kaboomwebsite/blob/main/crystalo.jpg?raw=true"height="300"></a>
     <p>click on the above pic to open</p>
 </br>
 <li><b><u>PEELY</u></b></li>
