--- a/3D_Portfolio.html
+++ b/3D_Portfolio.html
@@ -31,7 +31,7 @@
     </br>
     <li><b><u>CRYSTALO</u></b></li>
     <br />
-    <a href="https://www.artstation.com/artwork/39AR9J"><img src="https://github.com/KABOOMincognito/kaboomwebsite/blob/main/crystalo.jpg?raw=true"height="300"></a>
+    <a href="https://www.artstation.com/artwork/39AR9J"><img src="https://github.com/KABOOMincognito/kaboomwebsite/blob/main/crystalo.jpg?raw=true"height="300"></img></a>
     <p>click on the above pic to open</p>
 </br>
 <li><b><u>PEELY</u></b></li>
