--- a/3D_Portfolio.html
+++ b/3D_Portfolio.html
@@ -26,7 +26,7 @@
     <h2>$$$  3D Artworks  $$$</h2>
     <li><b><u>G.O.W</u></b></li>
     <br />
-    <a href="https://github.com/KABOOMincognito/kaboomwebsite/blob/main/crystalo.jpg?raw=true"><img src="/crystalo.jpg"height="300"></a>
+    <a href="https://www.artstation.com/artwork/WBNy6Q"><img src="https://github.com/KABOOMincognito/kaboomwebsite/blob/main/gow%20sword.jpg?raw=true"height="300"></img></a>
     <p>click on the above pic to open</p>
     </br>
     <li><b><u>CRYSTALO</u></b></li>
@@ -36,23 +36,23 @@
 </br>
 <li><b><u>PEELY</u></b></li>
 <br />
-<a href="https://github.com/KABOOMincognito/kaboomwebsite/blob/main/peely.jpg?raw=true"><img src="/peely.jpg"height="300"></a>
+<a href="https://www.artstation.com/artwork/YBwV2X"><img src="https://github.com/KABOOMincognito/kaboomwebsite/blob/main/peely.jpg?raw=true"height="300"></img></a>
 <p>click on the above pic to open</p>
 </br>
 <li><b><u>LION DAGGER</u></b></li>
 <br />
-<a href="https://github.com/KABOOMincognito/kaboomwebsite/blob/main/LION%20DAGGER.jpg?raw=true"><img src="/LION DAGGER.jpg"height="300"></a>
+<a href="https://www.artstation.com/artwork/Dvr4Ln"><img src="https://github.com/KABOOMincognito/kaboomwebsite/blob/main/LION%20DAGGER.jpg?raw=true"height="300"></img></a>
 <p>click on the above pic to open</p>
     <pre>xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx---------------------------------------------------------------------xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</pre>
     <h2>$$$  Character Designs  $$$</h2>
     <li><b><u>Lara Da Crook</u></b></li>
 
     <br />
-    <a href="https://www.artstation.com/artwork/JvxVqD"><img src="/character_design_laracroft.jpeg.jpg" height="300"></a>
+    <a href="https://www.artstation.com/artwork/JvxVqD"><img src="https://github.com/KABOOMincognito/kaboomwebsite/blob/main/character_design_laracroft.jpeg.jpg?raw=true" height="300"></img></a>
     <p>click on the above pic to open</p>
     <p><li><b><u>Zach The Cyber Bully</u></b></li></p>
     <br />
-    <a href="https://www.artstation.com/artwork/6NK9QV"><img src="/Cyber_punk.jpg" height="300"></a>
+    <a href="https://www.artstation.com/artwork/6NK9QV"><img src="https://github.com/KABOOMincognito/kaboomwebsite/blob/main/Cyber_punk.jpg?raw=true" height="300"></img></a>
     <p>click on the above pic to open</p>
 
     <pre>xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx---------------------------------------------------------------------xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</pre>
@@ -60,7 +60,7 @@
     <li><b><u>Lying Beauty</u></b></li>
 
     <br />
-    <a href="https://www.artstation.com/artwork/rJqnqL"><img src="/lying beauty.jpg" height="300"></a>
+    <a href="https://www.artstation.com/artwork/rJqnqL"><img src="https://github.com/KABOOMincognito/kaboomwebsite/blob/main/lying%20beauty.jpg?raw=true" height="300"></img></a>
     <p>click on the above pic to open</p>
 
     
