--- a/hello.html
+++ b/hello.html
@@ -15,7 +15,7 @@
     <h3>MADHURJO MAJUMDER / KABOOM 
         </h3>
     <img 
-         src="/my_dp.png"
+         src="https://github.com/KABOOMincognito/kaboomwebsite/blob/main/my_dp.png?raw=true"
      />
         </br>
     <pre>        An enthusiastic and self
