--- a/hello.html
+++ b/hello.html
@@ -16,7 +16,7 @@
         </h3>
     <img 
          src="https://github.com/KABOOMincognito/kaboomwebsite/blob/main/my_dp.png?raw=true"
-     />
+     /img>
         </br>
     <pre>        An enthusiastic and self
         driven learner inclined to
