--- a/hello.html
+++ b/hello.html
@@ -51,6 +51,13 @@
         playing computer games | making computer games | making 3D art
         traveling | meditation | yoga |
          </pre>
+    <footer>
+<pre>( -_•)▄︻テحكـ━一 __                              __                         
+                |  |--.-----.-----.--------.    |  |--.-----.-----.--------.
+                |  _  |  _  |  _  |        |    |  _  |  _  |  _  |        |
+                |_____|_____|_____|__|__|__|    |_____|_____|_____|__|__|__|
+                                                                                            ╾━╤デ╦︻(•⤙•)</pre>
+        </footer>
 <!--. This is a comment -->.
 </body>
 </html>
