--- a/3D_Portfolio.html
+++ b/3D_Portfolio.html
@@ -63,6 +63,14 @@
     <a href="https://www.artstation.com/artwork/rJqnqL"><img src="https://github.com/KABOOMincognito/kaboomwebsite/blob/main/lying%20beauty.jpg?raw=true" height="300"></img></a>
     <p>click on the above pic to open</p>
 
+    <footer>
+<pre>( -_•)▄︻テحكـ━一 __                              __                         
+                |  |--.-----.-----.--------.    |  |--.-----.-----.--------.
+                |  _  |  _  |  _  |        |    |  _  |  _  |  _  |        |
+                |_____|_____|_____|__|__|__|    |_____|_____|_____|__|__|__|
+                                                                                            ╾━╤デ╦︻(•⤙•)</pre>
+        </footer>
+
     
 </body>
 </html>
